Change the name of the analyze button and update popup.js to hidden the error message section when hitting analyze

--- a/ChromeExtension/popup.html
+++ b/ChromeExtension/popup.html
@@ -17,7 +17,7 @@
     <img src="icons/hint.png" style="width: 12px;"> It must be a product page of amazon.com website.
   </p>
 
-  <button id="analyze-button">Analyze</button>
+  <button id="analyze-button">Get the best and worst features!</button>
   <div id="analysis-result">
     <p>
       <img src="icons/best.png" style="width: 16px;vertical-align: middle;">
