Add loading message

--- a/ChromeExtension/popup.html
+++ b/ChromeExtension/popup.html
@@ -32,7 +32,7 @@
   </div>
   <div id="loading-indicator" style="display: none;">
     <img src="icons/loading.gif" alt="Loading..." class="loading-image" >
-    <!-- <p>Loading...</p> -->
+    <p id="loading-progress">Diving deep into the reviews ocean.<br> Your insights are on the way!</p>
   </div>
   <p id="fetch-error-message" style="display: none;">
     <img src="icons/exclamation.png" style="width: 12px;">
